--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "work-order-system",
+  "author": "ljtech",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "component": "node ./lib/cli/component.mjs"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.5.2-next.19",
+    "@prisma/client": "^3.5.0",
     "next": "12.0.4",
+    "next-auth": "^4.0.0-beta.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "16.11.9",
     "@types/react": "17.0.36",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "prisma": "^3.5.0",
     "typescript": "4.5.2"
   }
 }
